k8s/apps/chat/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-prod
  annotations:
    cnrm.cloud.google.com/project-id: kame-457417
    sidecar.istio.io/interceptionMode: 'NONE'
