k8s/apps/chat/overlays/prod/acme-service-namespace-patch.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: acme-service-to-infrastructure
patch: |-
  - op: replace
    path: /metadata/namespace
    value: default
target:
  group: ''
  version: v1
  kind: Service
  name: acme-challenge
