k8s/apps/chat/overlays/prod/istio-authorizationpolicy-global.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-ingress
  namespace: default
spec:
  action: ALLOW
  rules:
    - {}
